--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Skillverse - Professional AI Solution</title>
+    <title>Skillverse - SkillVerse is an AI-driven educational platform th</title>
     <meta name="description" content="SkillVerse is an AI-driven educational platform that connects small businesses with niche talent for short-term projects and upskilling. It uses advanced AI to match professionals seeking specific expertise with educators who can provide targeted, efficient learning experiences.">
-    <meta name="keywords" content="skillverse, AI, SaaS, business, productivity, automation">
+    <meta name="keywords" content="skillverse, AI, SaaS, ">
 
     <!-- Open Graph -->
     <meta property="og:title" content="Skillverse">
-    <meta property="og:description" content="SkillVerse is an AI-driven educational platform that connects small businesses with niche talent for short-term projects and upskilling. It uses advanced AI to match professionals seeking specific expertise with educators who can provide targeted, efficient learning experiences.">
+    <meta property="og:description" content="SkillVerse is an AI-driven educational platform that connects small businesses with niche talent for...">
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://bullrushinvestments.github.io/skillverse/">
 
     <!-- Twitter Card -->
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Skillverse">
-    <meta name="twitter:description" content="SkillVerse is an AI-driven educational platform that connects small businesses with niche talent for short-term projects and upskilling. It uses advanced AI to match professionals seeking specific expertise with educators who can provide targeted, efficient learning experiences.">
+    <meta name="twitter:description" content="SkillVerse is an AI-driven educational platform that connects small businesses with niche talent for...">
 
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -38,7 +38,7 @@
     <!-- Hero Section -->
     <header class="hero">
         <div class="container">
-            <h1>Transform Your Business with <span class="gradient-text">Skillverse</span></h1>
+            <h1>Transform Your Workflow with <span class="gradient-text">Skillverse</span></h1>
             <p class="hero-subtitle">SkillVerse is an AI-driven educational platform that connects small businesses with niche talent for short-term projects and upskilling. It uses advanced AI to match professionals seeking specific expertise with educators who can provide targeted, efficient learning experiences.</p>
             <div class="hero-cta">
                 <a href="pricing.html" class="btn btn-primary btn-large">Start Free Trial</a>
@@ -46,15 +46,15 @@
             </div>
             <div class="hero-stats">
                 <div class="stat">
-                    <span class="stat-number">10K+</span>
+                    <span class="stat-number">39K+</span>
                     <span class="stat-label">Active Users</span>
                 </div>
                 <div class="stat">
-                    <span class="stat-number">99.9%</span>
+                    <span class="stat-number">99.91%</span>
                     <span class="stat-label">Uptime</span>
                 </div>
                 <div class="stat">
-                    <span class="stat-number">24/7</span>
+                    <span class="stat-number">12/6</span>
                     <span class="stat-label">Support</span>
                 </div>
             </div>
@@ -69,33 +69,33 @@
             <div class="features-grid">
                 <div class="feature-card">
                 <div class="feature-icon">&#128202;</div>
-                <h3>AI-Powered Analytics</h3>
-                <p>Leverage cutting-edge technology to streamline your workflow and boost productivity.</p>
+                <h3>Adaptive Learning</h3>
+                <p>Content that adjusts to your learning pace</p>
             </div>
 <div class="feature-card">
                 <div class="feature-icon">&#9889;</div>
-                <h3>Real-time Insights</h3>
-                <p>Leverage cutting-edge technology to streamline your workflow and boost productivity.</p>
+                <h3>Progress Tracking</h3>
+                <p>Detailed analytics on your learning journey</p>
             </div>
 <div class="feature-card">
                 <div class="feature-icon">&#128640;</div>
-                <h3>Automated Workflows</h3>
-                <p>Leverage cutting-edge technology to streamline your workflow and boost productivity.</p>
+                <h3>Certification Ready</h3>
+                <p>Industry-recognized credentials upon completion</p>
             </div>
 <div class="feature-card">
                 <div class="feature-icon">&#128101;</div>
-                <h3>Team Collaboration</h3>
-                <p>Leverage cutting-edge technology to streamline your workflow and boost productivity.</p>
+                <h3>Expert Instructors</h3>
+                <p>Learn from verified industry professionals</p>
             </div>
 <div class="feature-card">
                 <div class="feature-icon">&#128279;</div>
-                <h3>Custom Integrations</h3>
-                <p>Leverage cutting-edge technology to streamline your workflow and boost productivity.</p>
+                <h3>Community Forums</h3>
+                <p>Engage with peers and mentors</p>
             </div>
 <div class="feature-card">
                 <div class="feature-icon">&#128222;</div>
-                <h3>24/7 Support</h3>
-                <p>Leverage cutting-edge technology to streamline your workflow and boost productivity.</p>
+                <h3>Mobile Learning</h3>
+                <p>Learn anywhere with offline mode support</p>
             </div>
             </div>
         </div>
@@ -111,9 +111,9 @@
                 <h3>Starter</h3>
                 <div class="price">$9<span>/month</span></div>
                 <ul>
-                    <li>Basic features</li><li>1 user</li><li>Email support</li>
+                    <li>Core features</li><li>1 user</li><li>Email support</li><li>5GB storage</li>
                 </ul>
-                <a href="https://buy.stripe.com/test_placeholder" class="btn btn-secondary">
+                <a href="pricing.html" class="btn btn-secondary">
                     Get Started
                 </a>
             </div>
@@ -121,9 +121,9 @@
                 <h3>Professional</h3>
                 <div class="price">$29<span>/month</span></div>
                 <ul>
-                    <li>All features</li><li>5 users</li><li>Priority support</li><li>API access</li>
+                    <li>All features</li><li>5 users</li><li>Priority support</li><li>50GB storage</li><li>API access</li>
                 </ul>
-                <a href="https://buy.stripe.com/test_placeholder" class="btn btn-primary">
+                <a href="pricing.html" class="btn btn-primary">
                     Get Started
                 </a>
             </div>
@@ -131,9 +131,9 @@
                 <h3>Enterprise</h3>
                 <div class="price">$99<span>/month</span></div>
                 <ul>
-                    <li>Unlimited users</li><li>Dedicated support</li><li>Custom integrations</li><li>SLA guarantee</li>
+                    <li>Unlimited users</li><li>Dedicated support</li><li>Unlimited storage</li><li>Custom integrations</li><li>SLA guarantee</li>
                 </ul>
-                <a href="https://buy.stripe.com/test_placeholder" class="btn btn-secondary">
+                <a href="pricing.html" class="btn btn-secondary">
                     Get Started
                 </a>
             </div>
@@ -145,7 +145,7 @@
     <section class="cta">
         <div class="container">
             <h2>Ready to Get Started?</h2>
-            <p>Join thousands of businesses already using Skillverse</p>
+            <p>Join 39K+ users already using Skillverse</p>
             <a href="pricing.html" class="btn btn-primary btn-large">Start Your Free Trial</a>
         </div>
     </section>
@@ -156,7 +156,7 @@
             <div class="footer-grid">
                 <div class="footer-brand">
                     <h3>Skillverse</h3>
-                    <p>SkillVerse is an AI-driven educational platform that connects small businesses with niche talent for short-term projects and upskilling. It uses advanced AI to match professionals seeking specific expertise with educators who can provide targeted, efficient learning experiences.</p>
+                    <p>SkillVerse is an AI-driven educational platform that connects small businesses with niche talent for...</p>
                 </div>
                 <div class="footer-links">
                     <h4>Product</h4>
@@ -183,7 +183,6 @@
     </footer>
 
     <script>
-        // Smooth scrolling
         document.querySelectorAll('a[href^="#"]').forEach(anchor => {
             anchor.addEventListener('click', function (e) {
                 e.preventDefault();
